package entities

type Code struct {
	Message string `json:"message"`
	Code    int    `json:"code"`
}
